WIP: Properly integrate generational mode testing